2007-05-09  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.12
	
	* hildon-application-manager.conf: Reorder entries so that the
	"applications" category gets priority.  This ensures that the
	"applications" category works even now before the backup can
	handle one file in multiple categories.

	* configure.ac (DEFAULT_DIST): Changed to "chinook".

	* src/hildon-application-manager-util: New.
	* hildon-application-manager.sh: Use it.
	* debian/postinst, debian/prerm: Add sudo line for it.
	* src/Makefile.am: Install it.
	
2007-05-07  Marius Vollmer  <marius.vollmer@nokia.com>

	* configure.ac (DEFAULT_DIST): Changed to "unstable".

	* src/apt-worker.cc (cmd_install_file): Do not remove the package
	when the installation failed.

	Released 1.9.11
	
	* src/apt-worker.cc (get_domain for pkgCache::PkgIterator):
	Removed, it was unused.
	(mark_sys_upgrades): Do not try to install packages that are not
	in the "keep" mode.  This prevents us from accidentally undoing
	removals that are part of the upgrade.
	
	* src/details.cc (show_with_details_with_cont): Always list
	everything in red pill mode.

2007-05-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.10
	
	* src/apt-worker.cc (cmd_get_file_details): Report NULL when there
	is no Maemo-Display-Name field instead of the empty string.
	
	* src/operations.cc (if_details_reply): Decode sizes as int64 to
	correspond to protocol, stupid.

2007-05-02  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.9

	* debian/preinst: Never fail.
	* debian/postinst: Use "-f" with rm and mv.

2007-04-27  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.7
	
	* src/repo.cc (cat_edit_response): Ask the pill question after
	destroying this dialog so that the dialog parents don't get out of
	sync.

	* src/hildon-application-manager-config.cc (xexp_read_stdin):
	Return the xexp instead of always NULL, stupid.
	(handle_generic_element): Also report elements that should be
	deleted but are not found.
	